fix: Prevent text jumping when swtiching tabs [TabbedSection]  + Shrink size of tab "counter" circle slightly

--- a/client/src/app/components/hoc/TabbedSection.scss
+++ b/client/src/app/components/hoc/TabbedSection.scss
@@ -32,6 +32,7 @@
 
             &.active {
                 color: $mint-green-6;
+                padding-bottom: 21px;
                 border-bottom: 3px solid $mint-green-6;
             }
 
@@ -65,11 +66,11 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                min-width: 30px;
+                min-width: 24px;
                 font-size: 12px;
                 font-family: $inter;
                 font-weight: 500;
-                padding: 8px;
+                padding: 4px;
                 border-radius: 16px;
                 background: $gray-1;
                 color: $gray-6;
